--- a/Camera/gallery.css
+++ b/Camera/gallery.css
@@ -5,6 +5,7 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: rgb(0, 0, 0);
 }
 
 h1{
@@ -35,7 +36,9 @@ h1{
 .gallery-cont{
     height: 100vh;
     width: 100vw;
-    background-color: rgb(0, 0, 0);
+   
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .media-cont{
